--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.6.0",
     "sweetalert2": "^11.21.1",
     "tailwind-merge": "^3.3.0",
@@ -30,9 +34,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-map-gl": "^6.1.7",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
